<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".allcoursesinneractivities.RegisterCourseActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Product Details:"
            android:textColor="@color/clr_black"
            android:textSize="16dp"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/clr_registrationtxt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Courses"
                android:textSize="16dp"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="8dp"
                android:textColor="@color/clr_black"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/courseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Courses"
                android:textSize="14dp"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="8dp"
                android:textColor="@color/clr_black"
                android:textStyle="italic"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CoursesPrice"
                android:textSize="16dp"
                android:padding="8dp"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/clr_black"
                android:textStyle="italic"/>


            <TextView
                android:id="@+id/coursePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Total"
                android:textSize="14dp"
                android:padding="8dp"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/clr_black"
                android:textStyle="italic"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/clr_registrationtxt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Several ways to make payments to IALM"
            android:textColor="@color/clr_black"
            android:textSize="16dp"
            android:textStyle="italic"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/OnlinePaymentOptions"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:enabled="false"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/OfflinePaymentOptions"
                android:textSize="14dp"
                android:checked="true"
                android:layout_marginTop="10dp"/>
        </RadioGroup>



        <TextView
            android:id="@+id/tv_registercourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/clr_loginbtn_bg"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingTop="8dp"
            android:paddingRight="30dp"
            android:paddingBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/registretocourse"
            android:textColor="@color/clr_white"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            android:textStyle="bold" />


    </LinearLayout>


    </ScrollView>


</LinearLayout>