<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".LandingActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/txt_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/splash_new"
            android:padding="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lmsacademy"
            android:textColor="@color/clr_white"
            android:textSize="30dp"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:textStyle="bold"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_weight="1"
            android:background="@color/clr_loginbtn_bg"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_weight="1"
            android:background="@color/clr_signupbtn_bg"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>

    </LinearLayout>







</LinearLayout>