<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".allcoursesinneractivities.ReviewCourseActivity">

    <include layout="@layout/toolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WriteAReview"
            android:textColor="@color/clr_black"
            android:textSize="18dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ReviewTitle"
                android:textColor="@color/clr_black"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/editReviewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/black_bordar"
                android:hint="Enter title"
                android:padding="10dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Review Rating"
                android:textSize="16dp"
                android:textColor="@color/clr_black"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="1.0"
                android:numStars="5"
               android:layout_gravity="center_horizontal"/>


        </LinearLayout>

        <EditText
            android:id="@+id/editComment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/black_bordar"
            android:hint="Enter title"
            android:padding="10dp"
            android:gravity="left"/>



        <TextView
            android:id="@+id/tvpostReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PostReview"
            android:background="@color/clr_loginbtn_bg"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="@color/clr_white"
            android:layout_marginRight="2dp"/>


    </LinearLayout>
    </ScrollView>

</LinearLayout>