<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_gray"
    android:orientation="vertical"
    tools:context=".allcoursesinneractivities.CourseDatailActivity">

    <include layout="@layout/toolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/clr_gray"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_JoinCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="10dp"
                    android:background="@color/clr_loginbtn_bg"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="10dp"
                    android:text="@string/JoinCourse"
                    android:textAllCaps="true"
                    android:textColor="@color/clr_white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />


                <ImageView
                    android:id="@+id/iv_course"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/defaultimage" />


                <TextView
                    android:id="@+id/tv_course_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_black_oultine"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@color/clr_black"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_course_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text=" "
                        android:textStyle="italic"
                        android:textAlignment="textStart"
                        android:textColor="@color/clr_black"
                        android:textSize="14dp" />


                    <TextView
                        android:id="@+id/tv_student_rnroll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text=" "
                        android:textStyle="italic"
                        android:textColor="@color/clr_black"
                        android:textSize="14dp" />


                    <TextView
                        android:id="@+id/tv_link_knowmore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:text="@string/clicktoknowmore"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="25dp">

                <TextView
                    android:id="@+id/tv_registercourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/clr_loginbtn_bg"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="10dp"
                    android:text="@string/registrecourse"
                    android:textColor="@color/clr_white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>